Closes #37 -- added z-index to nav logo to prevent being overlapped during scroll

--- a/public/wp-content/themes/startupandplay/css/sass/_layout.scss
+++ b/public/wp-content/themes/startupandplay/css/sass/_layout.scss
@@ -58,6 +58,7 @@ body {
 					h1 {
 						position: fixed;
 						overflow: hidden;
+						z-index: 100;
 						height: 50px;
 						width: 50px;
 						top: 10px;
